--- a/versions.cfg
+++ b/versions.cfg
@@ -260,3 +260,13 @@ zope.testing = 4.1.3
 # Required by:
 # z3c.table==1.0.0
 zope.traversing = 4.0.0
+
+ipython = 2.3.1
+
+# Required by:
+# ul.sql==0.1
+ul.browser = 0.1.1
+
+# Required by:
+# ul.browser==0.1.1
+uvc.entities = 0.1
